summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: illegal start of simple expression
  while (isOver = = false ){
                  ^Moria:8: error: ')' expected but '}' found.
} 
^