summative.moria.Moria.scala.code
var isOver : Boolean = false
def Moria() {
  while (isOver = = false ){
   right()
    right()
    isOver=true
  }
}